[gd_scene load_steps=10 format=3 uid="uid://dvguv5o1xsh4y"]

[ext_resource type="PackedScene" uid="uid://q5v5cu784eqv" path="res://scenes/prefab/escape_button.tscn" id="1_3uk6k"]
[ext_resource type="Script" path="res://scripts/level_05.gd" id="1_4s0ox"]
[ext_resource type="PackedScene" uid="uid://crjqsjwl2q87i" path="res://scenes/prefab/gate.tscn" id="2_q6cb7"]
[ext_resource type="PackedScene" uid="uid://ctmp7o4ijahp2" path="res://scenes/prefab/player.tscn" id="3_u35wo"]
[ext_resource type="PackedScene" uid="uid://bb80ejp6p3y0w" path="res://scenes/prefab/side_wall.tscn" id="4_7a8iq"]
[ext_resource type="PackedScene" uid="uid://ds5xwtjbwixmf" path="res://scenes/prefab/fallout_zone.tscn" id="5_7rl4p"]
[ext_resource type="PackedScene" uid="uid://wi1yeq0iuogq" path="res://scenes/prefab/platform_parent.tscn" id="7_n7ogi"]
[ext_resource type="PackedScene" uid="uid://c5temua38dqbd" path="res://scenes/prefab/detect_area.tscn" id="8_jnptp"]
[ext_resource type="PackedScene" uid="uid://dgmrjdh6gjqor" path="res://scenes/prefab/sawblade_parent.tscn" id="8_mh6s0"]

[node name="Level_05" type="Node2D"]
script = ExtResource("1_4s0ox")

[node name="EscapeButton" parent="." instance=ExtResource("1_3uk6k")]

[node name="Gate" parent="." instance=ExtResource("2_q6cb7")]
position = Vector2(1106, 517)

[node name="Player" parent="." instance=ExtResource("3_u35wo")]
position = Vector2(92, 220)

[node name="SideWall" parent="." instance=ExtResource("4_7a8iq")]
position = Vector2(-17, 338)

[node name="SideWall2" parent="." instance=ExtResource("4_7a8iq")]
position = Vector2(1169, 338)

[node name="FalloutZone" parent="." instance=ExtResource("5_7rl4p")]
position = Vector2(578, 684)

[node name="Sawblade-Parent" parent="." instance=ExtResource("8_mh6s0")]
position = Vector2(-28, 191)

[node name="DetectArea" parent="." instance=ExtResource("8_jnptp")]
position = Vector2(1086, 351)
rotation = 1.5708

[node name="Sawblade-Parent2" parent="." instance=ExtResource("8_mh6s0")]
position = Vector2(1180, 339)

[node name="DetectArea2" parent="." instance=ExtResource("8_jnptp")]
position = Vector2(66, 499)
rotation = 1.5708

[node name="Sawblade-Parent3" parent="." instance=ExtResource("8_mh6s0")]
position = Vector2(-28, 487)

[node name="DetectArea3" parent="." instance=ExtResource("8_jnptp")]
position = Vector2(822, 499)
rotation = 1.5708
scale = Vector2(1, 0.2)

[node name="Sawblade-Parent4" parent="." instance=ExtResource("8_mh6s0")]
position = Vector2(1180, 487)

[node name="Platform-Parent" parent="." instance=ExtResource("7_n7ogi")]
position = Vector2(576, 561)
scale = Vector2(19.2, 1)

[node name="Platform-Parent2" parent="." instance=ExtResource("7_n7ogi")]
position = Vector2(540, 265)
scale = Vector2(18, 1)

[node name="Platform-Parent3" parent="." instance=ExtResource("7_n7ogi")]
position = Vector2(612, 413)
scale = Vector2(18, 1)

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_entered" from="DetectArea2" to="." method="_on_detect_area_2_body_entered"]
[connection signal="body_entered" from="DetectArea3" to="." method="_on_detect_area_3_body_entered"]
